--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,8 @@ target 'finco' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
   target 'fincoTests' do
     inherit! :search_paths
     # Pods for testing
