--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "native-base": "^2.13.5",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.12.0",
-    "moment": "^2.24.0"
+    "react-navigation": "^3.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -30,4 +31,5 @@
   "jest": {
     "preset": "react-native"
   }
+
 }
